--- a/main.html
+++ b/main.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <body>
+	  <h3 id="url">https://localhost:8080/</h3>
+	  <label for="name">Name</label>
+	  <input id="name" type="text">
+	  <br>
+	  <br>
+	  <label for="year">Year</label>
+	  <input id="year" type="number">
+	  <br>
+	  <br>
+	  <button id="button" onclick>Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
