--- a/main.html
+++ b/main.html
@@ -2,15 +2,17 @@
 <html>
   <body>
 	  <h3 id="url">https://localhost:8080/</h3>
-	  <label for="name">Name</label>
+	  <label for="name">Name:</label>
+	  <br>
 	  <input id="name" type="text">
 	  <br>
 	  <br>
-	  <label for="year">Year</label>
+	  <label for="year">Graduation year:</label>
+	  <br>
 	  <input id="year" type="number">
 	  <br>
 	  <br>
-	  <button id="button" onclick>Submit</button>
+	  <button id="button" onclick="extend()">Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
