--- a/main.html
+++ b/main.html
@@ -4,12 +4,12 @@
 	  <h3 id="url">https://localhost:8080/</h3>
 	  <label for="name">Name:</label>
 	  <br>
-	  <input id="name" type="text" name="name">
+	  <input id="name" type="text" name="name" value="john">
 	  <br>
 	  <br>
 	  <label for="year">Graduation year:</label>
 	  <br>
-	  <input id="year" type="number" name="year">
+	  <input id="year" type="number" name="year" value="2022">
 	  <br>
 	  <br>
 	  <button id="button" onclick="extend()">Submit</button>
