--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 	  <h3 id="url">https://localhost:8080/</h3>
 	  <label for="name">Name:</label>
 	  <br>
-	  <input id="name" type="text" name="name" value="john">
+	  <input id="name" type="text" name="name" value="John">
 	  <br>
 	  <br>
 	  <label for="year">Graduation year:</label>
