--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 	  <input id="year" type="number" name="year" value="2022">
 	  <br>
 	  <br>
-	  <button id="button" onclick="extend()">Submit</button>
+	  <button id="button" >Submit</button>
     <script type="text/javascript" src="./script.js">
 </script>
   </body>
